# flow

./: .gitignore  README.md  pyproject.toml
.github/workflows/: workflow.yml
examples/: agi-watcher.yaml  ci-notify.yaml
src/flow/: __init__.py  ansi.py  backend.py  cli.py  common.py  flowfile.py  paths.py  render.py  runtime.py  store.py  ui_data.py  ui_server.py
tests/: test_backend.py  test_cli.py  test_flowfile.py  test_runtime.py  test_ui_api.py
ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/src/: App.tsx  api.ts  format.test.ts  format.ts  graph.test.ts  graph.ts  styles.css  tauri.ts  types.ts
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/src/: main.rs
ui/src/components/: EventStrip.tsx  FlowEdge.tsx  SelectedAgentHeader.tsx  StateNode.test.tsx  StateNode.tsx  TopStrip.tsx
