[package]
name = "flow-ui"
version = "0.1.0"
description = "Graph-first UI for Flow"
authors = ["yieldthought"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
